--- a/HolidayPlanner/HolidayPlanner.csproj
+++ b/HolidayPlanner/HolidayPlanner.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
 
